Fix TaskTriggered task activation assessment
- enable JDK 15