@@ -24,6 +24,15 @@ allprojects {
     sourceCompatibility = JavaVersion.VERSION_14
     targetCompatibility = JavaVersion.VERSION_14
 
+    //tasks.withType(JavaCompile) {
+    //    options.compilerArgs += "--enable-preview"
+    //}
+    //tasks.withType(Test) {
+    //    jvmArgs += "--enable-preview"
+    //}
+    //tasks.withType(JavaExec) {
+    //    jvmArgs += "--enable-preview"
+    //}
 }
 
 subprojects {
